fix kb home card alignment

--- a/src/components/pages/help_center/components/navCard/navCard.scss
+++ b/src/components/pages/help_center/components/navCard/navCard.scss
@@ -20,7 +20,8 @@
   
   a {
     color: unset;
-    display: flex;
+    display: grid;
+    grid-template-columns: auto 1fr;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
